--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   
   <script type="text/javascript" charset="utf-8">
       macgap.growl.notify({title: 'MacGap', content: 'Hello World'});
+      macgap.window.open({url:"public/index2.html",width:500, height:300});
   </script>
   
   <h1>MacGap</h1>
