nearly done new window... resize bar isn't added right away

--- a/public/index2.html
+++ b/public/index2.html
@@ -27,6 +27,7 @@
         
         <script type="text/javascript" charset="utf-8">
             macgap.growl.notify({title: 'MacGap', content: 'Second Window'});
+            macgap.app.beep();
             </script>
         
         <h1>MacGap Second Window</h1>
