--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <body>
   
   <script type="text/javascript" charset="utf-8">
-      macgap.growl.notify({title: 'MacGap', content: 'Hello World'});
+      macgap.notice.notify({title: 'MacGap', content: 'Hello World'});
   </script>
   
   <h1>MacGap</h1>
